tests/sksl/errors/ArrayTypeTooManyDimensions.dsl.glsl
### Compilation failed:

error: multi-dimensional arrays are not supported
1 error
